--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,19 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Myintagram"
-        tools:targetApi="31">
+        >
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginMyintaa"
+            android:exported="false" />
+        <activity
+            android:name=".LoginMyinta"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
